gitops/kustomize/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    security.ehg.io/policy-enforcement: enabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    security.ehg.io/observability: enabled
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    security.ehg.io/tracing: enabled
    pod-security.kubernetes.io/enforce: baseline
